tests/positive/pr1110a_optional_guarded.safe
-- Test: pr1110a_optional_guarded
-- Description: Built-in optional values support guarded `.value` access,
--   contextual `none`, and absent default initialization.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110a-built-in-optional-t
-- Expected: ACCEPT

package pr1110a_optional_guarded

   function parse (input : integer) returns optional integer

      if input > 0
         return some (input);
      else
         return none;

   function get_or_zero (input : integer) returns integer
      value : optional integer = parse (input);

      if value.present
         return value.value;
      else
         return 0;

   function default_is_absent returns boolean
      value : optional integer;
      fallback : optional integer = (none as optional integer);

      return (not value.present) and then (not fallback.present);
